test/error/syn/functionWrongSemicolon.tig
let
    var n := 0     
    var f := 1     
    var i := 2     
    function fun(a;b,c) := 
    (
	    a:=b*c
    )

in  
    fun(n,f,i);
end
